--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     ></script>
 
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
@@ -138,49 +142,189 @@
       </div>
       <!-- About Section End -->
 
+      <div class="main-catergories-wrapper">
+        <!-- <div class="left-bg-img">
+          <img src="shirt-bg.png" alt="">
+        </div> -->
+
+        <div class="container">
+          <div class="catergory-header">
+            <h2>NEW <span>ARRIVALS</span></h2>
+            <hr class="heding-hr" />
+          </div>
+
+          <div class="catergory-slider-wrapper">
+            <div class="catergories-cards d-flex justify-content-center">
+              <div class="catergory-card pt-5 pb-5 g-2">
+                <div class="card-body-wrapper">
+                  <div class="stock">
+                    <p>In Stock</p>
+                  </div>
+                  <div class="card-image d-flex justify-content-center">
+                    <img src="shirt-bg.png" alt="" height="200px" />
+                  </div>
+                  <div class="card-data-wrapper">
+                    <div class="card-name">
+                      <p>MEN'S T-SHIRT</p>
+                    </div>
+                    <div class="price-wrapper">
+                      <div class="was-price">
+                        <p>2800 LKR</p>
+                      </div>
+                      <div class="now-price">
+                        <p>2500.00 LKR</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="catergory-card pt-5 pb-5 g-2">
+                <div class="card-body-wrapper">
+                  <div class="stock">
+                    <p>In Stock</p>
+                  </div>
+                  <div class="card-image d-flex justify-content-center">
+                    <img src="shirt-bg.png" alt="" height="200px" />
+                  </div>
+                  <div class="card-data-wrapper">
+                    <div class="card-name">
+                      <p>MEN'S T-SHIRT</p>
+                    </div>
+                    <div class="price-wrapper">
+                      <div class="was-price">
+                        <p>2800 LKR</p>
+                      </div>
+                      <div class="now-price">
+                        <p>2500.00 LKR</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="catergory-card pt-5 pb-5 g-2">
+                <div class="card-body-wrapper">
+                  <div class="stock">
+                    <p>In Stock</p>
+                  </div>
+                  <div class="card-image d-flex justify-content-center">
+                    <img src="shirt-bg.png" alt="" height="200px" />
+                  </div>
+                  <div class="card-data-wrapper">
+                    <div class="card-name">
+                      <p>MEN'S T-SHIRT</p>
+                    </div>
+                    <div class="price-wrapper">
+                      <div class="was-price">
+                        <p>2800 LKR</p>
+                      </div>
+                      <div class="now-price">
+                        <p>2500.00 LKR</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="catergory-card pt-5 pb-5 g-2">
+                <div class="card-body-wrapper">
+                  <div class="stock">
+                    <p>In Stock</p>
+                  </div>
+                  <div class="card-image d-flex justify-content-center">
+                    <img src="shirt-bg.png" alt="" height="200px" />
+                  </div>
+                  <div class="card-data-wrapper">
+                    <div class="card-name">
+                      <p>MEN'S T-SHIRT</p>
+                    </div>
+                    <div class="price-wrapper">
+                      <div class="was-price">
+                        <p>2800 LKR</p>
+                      </div>
+                      <div class="now-price">
+                        <p>2500.00 LKR</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="catergory-card pt-5 pb-5 g-2">
+                <div class="card-body-wrapper">
+                  <div class="stock">
+                    <p>In Stock</p>
+                  </div>
+                  <div class="card-image d-flex justify-content-center">
+                    <img src="shirt-bg.png" alt="" height="200px" />
+                  </div>
+                  <div class="card-data-wrapper">
+                    <div class="card-name">
+                      <p>MEN'S T-SHIRT</p>
+                    </div>
+                    <div class="price-wrapper">
+                      <div class="was-price">
+                        <p>2800 LKR</p>
+                      </div>
+                      <div class="now-price">
+                        <p>2500.00 LKR</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <!-- Footer Start -->
-      <div class="footer-wrapper">
+      <div class="footer-wrapper" id="footer">
         <div class="container pt-5">
           <div class="row">
             <!-- Left Footer  -->
             <div class="col-md-8 position-relative">
               <div class="row">
-                <div class="col-md-6 col-lg-4 col-xl-4 col-6" id="footer-sections">
+                <div
+                  class="col-md-6 col-lg-4 col-xl-4 col-6"
+                  id="footer-sections"
+                >
                   <div class="footer-heading">
                     <h5>Categories</h5>
-                    <hr class="footer-hr">
+                    <hr class="footer-hr" />
                   </div>
                   <div class="catergory-list">
                     <ul>
-                        <li><a href="">Women</a> </li>
-                        <li><a href="">Men</a> </li>
-                        <li><a href="">Kids</a> </li>
-                        <li><a href="">Accessories</a> </li>
-
+                      <li><a href="">Women</a></li>
+                      <li><a href="">Men</a></li>
+                      <li><a href="">Kids</a></li>
+                      <li><a href="">Accessories</a></li>
                     </ul>
                   </div>
                 </div>
-                <div class="col-md-6 col-lg-4 col-xl-4 col-6" id="footer-sections">
-                    <div class="footer-heading">
-                      <h5>About us</h5>
-                      <hr class="footer-hr">
-                    </div>
+                <div
+                  class="col-md-6 col-lg-4 col-xl-4 col-6"
+                  id="footer-sections"
+                >
+                  <div class="footer-heading">
+                    <h5>About us</h5>
+                    <hr class="footer-hr" />
+                  </div>
 
-                    <div class="catergory-list">
-                        <ul>
-                            <li><a href="">Women</a> </li>
-                            <li><a href="">Men</a> </li>
-                            <li><a href="">Kids</a> </li>
-                            <li><a href="">Accessories</a> </li>
-    
-                        </ul>
-                      </div>
+                  <div class="catergory-list">
+                    <ul>
+                      <li><a href="">Mission</a></li>
+                      <li><a href="">Vision</a></li>
+                      <li><a href="">Mmembers</a></li>
+                      <li><a href="">Director's Massege</a></li>
+                    </ul>
                   </div>
-                  <div class="col-md-6 col-lg-4 col-xl-4 col-6" id="footer-sections">
-                    <div class="footer-heading">
-                     
-                    </div>
-                  </div>
+                </div>
+                <div
+                  class="col-md-6 col-lg-4 col-xl-4 col-6"
+                  id="footer-sections"
+                >
+                  <div class="footer-heading"></div>
+                </div>
               </div>
               <div
                 class="vr position-absolute my-0 h-100 d-none d-md-block top-0 end-0"
@@ -189,19 +333,34 @@
 
             <!-- Right Footer -->
             <div class="col-md-4 position-relative">
-              <p style="color: grey;">
+              <p style="color: grey">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Voluptatem tenetur totam quos quam aut ipsum explicabo placeat
                 iusto, eum eos repellendus temporibus qui facilis veniam,
                 adipisci dicta, earum cum ullam.
               </p>
+
+              <div class="socials-list d-flex">
+                <div class="social-icons-f px-2">
+                  <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                </div>
+                <div class="social-icons px-2">
+                  <a href=""><i class="fa-brands fa-instagram"></i></a>
+                </div>
+                <div class="social-icons px-2">
+                  <a href=""><i class="fa-brands fa-tiktok"></i></a>
+                </div>
+                <div class="social-icons px-2">
+                  <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+              </div>
             </div>
           </div>
-          <hr class="end-footer-hr">
+          <hr class="end-footer-hr" />
 
           <div class="container pb-1">
             <div class="developer-details text-center">
-                <h6>Site Designe & Developed by Vimukthi Malinda</h6>
+              <h6>Site Designe & Developed by Vimukthi Malinda</h6>
             </div>
           </div>
         </div>
@@ -214,5 +373,54 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-1.11.0.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $(".catergories-cards").slick({
+          infinite: true,
+          speed: 300,
+          autoplay: true,
+          autoplaySpeed: 2500,
+          slidesToShow: 4,
+          slidesToScroll: 4,
+          responsive: [
+            {
+              breakpoint: 1024,
+              settings: {
+                slidesToShow: 3,
+                slidesToScroll: 3,
+                infinite: true,
+              },
+            },
+            {
+              breakpoint: 600,
+              settings: {
+                slidesToShow: 2,
+                slidesToScroll: 2,
+              },
+            },
+            {
+              breakpoint: 480,
+              settings: {
+                slidesToShow: 1,
+                slidesToScroll: 1,
+              },
+            },
+            // You can unslick at a given breakpoint now by adding:
+            // settings: "unslick"
+            // instead of a settings object
+          ],
+        });
+      });
+    </script>
   </body>
 </html>
