--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
   </head>
   <body>
     <div class="body-wrapper">
+
+
+
+
+
       <!-- About Section Start -->
       <div class="about-section-wrapper pb-5">
         <div class="left-image" id="move">
-          <img src="43226.jpg" alt="" />
+          <!-- <img src="43226.jpg" alt="" /> -->
         </div>
 
         <div class="right-image">
@@ -77,7 +82,7 @@
 
                   <div class="marketing-description-wrapper">
                     <div class="marketing-heading">
-                      <p>TEST PURPOSE</p>
+                      <p>QUALITY PRODUCTS</p>
                     </div>
                     <div class="markertig-description">
                       <p>We are number one T Shirt Designers in Sri Lanka</p>
@@ -94,7 +99,7 @@
 
                   <div class="marketing-description-wrapper">
                     <div class="marketing-heading">
-                      <p>TEST PURPOSE</p>
+                      <p>ONE CLICK-BUY</p>
                     </div>
                     <div class="markertig-description">
                       <p>We are number one T Shirt Designers in Sri Lanka</p>
@@ -111,7 +116,7 @@
 
                   <div class="marketing-description-wrapper">
                     <div class="marketing-heading">
-                      <p>TEST PURPOSE</p>
+                      <p>BEST PRICE</p>
                     </div>
                     <div class="markertig-description">
                       <p>We are number one T Shirt Designers in Sri Lanka</p>
@@ -128,7 +133,7 @@
 
                   <div class="marketing-description-wrapper">
                     <div class="marketing-heading">
-                      <p>TEST PURPOSE</p>
+                      <p>DELIVER TO-DOOR</p>
                     </div>
                     <div class="markertig-description">
                       <p>We are number one T Shirt Designers in Sri Lanka</p>
@@ -149,12 +154,12 @@
 
         <div class="container">
           <div class="catergory-header">
-            <h2>NEW <span>ARRIVALS</span></h2>
+            <h2>NEW <span>ARRIVALS</span> FOR MENS</h2>
             <hr class="heding-hr" />
           </div>
 
           <div class="catergory-slider-wrapper">
-            <div class="catergories-cards d-flex justify-content-center">
+            <div class="catergories-cards mb-5 d-flex justify-content-center">
               <div class="catergory-card pt-5 pb-5 g-2">
                 <div class="card-body-wrapper">
                   <div class="stock">
@@ -386,6 +391,8 @@
     <script type="text/javascript">
       $(document).ready(function () {
         $(".catergories-cards").slick({
+    
+       
           infinite: true,
           speed: 300,
           autoplay: true,
