--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="body-wrapper">
 
 
+      <!-- Navigation Start -->
 
 
 
@@ -166,6 +167,9 @@
                     <p>In Stock</p>
                   </div>
                   <div class="card-image d-flex justify-content-center">
+                    <div class="overlay">
+                     <a href=""><i class="fa-solid fa-plus "></i></a> 
+                    </div>
                     <img src="shirt-bg.png" alt="" height="200px" />
                   </div>
                   <div class="card-data-wrapper">
@@ -190,6 +194,9 @@
                     <p>In Stock</p>
                   </div>
                   <div class="card-image d-flex justify-content-center">
+                    <div class="overlay">
+                      <a href=""><i class="fa-solid fa-plus "></i></a> 
+                     </div>
                     <img src="shirt-bg.png" alt="" height="200px" />
                   </div>
                   <div class="card-data-wrapper">
@@ -214,6 +221,9 @@
                     <p>In Stock</p>
                   </div>
                   <div class="card-image d-flex justify-content-center">
+                    <div class="overlay">
+                      <a href=""><i class="fa-solid fa-plus "></i></a> 
+                     </div>
                     <img src="shirt-bg.png" alt="" height="200px" />
                   </div>
                   <div class="card-data-wrapper">
@@ -237,6 +247,9 @@
                     <p>In Stock</p>
                   </div>
                   <div class="card-image d-flex justify-content-center">
+                    <div class="overlay">
+                      <a href=""><i class="fa-solid fa-plus "></i></a> 
+                     </div>
                     <img src="shirt-bg.png" alt="" height="200px" />
                   </div>
                   <div class="card-data-wrapper">
@@ -260,6 +273,9 @@
                     <p>In Stock</p>
                   </div>
                   <div class="card-image d-flex justify-content-center">
+                    <div class="overlay">
+                      <a href=""><i class="fa-solid fa-plus "></i></a> 
+                     </div>
                     <img src="shirt-bg.png" alt="" height="200px" />
                   </div>
                   <div class="card-data-wrapper">
